Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-4801

"Parse" progress bar will not disappear when switching build configuration

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • Qt Creator 2.3.0
    • Qt Creator 2.2.0, Qt Creator 2.3.0
    • None
    • Windows Vista x64

      1. Open a project and create at least two build configurations for it.
        A progress bar reading "Parse" appears.
      2. While the project is being parsed by Qt Creator, switch the build configuration.
        Another progress bar appears. After the parsing finished, the second progress bar disappears while the first one stays on the screen:

        1. parse.png
          16 kB
          Robert Löhning
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dt Daniel Teske
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes